# HPC-GuessNumber

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: Hello.h
script/: build.bat  clean.bat  package.bat  run.bat
src/: CMakeLists.txt  Hello.cpp  Main.cpp  hello.cc  main.cc
tests/: CMakeLists.txt  Test.cpp  test.cc
